...
  Welcome: undefined;
  StaffLogin: undefined;
  ManagerLogin: undefined;
};

export type MainTabParamList = {
  Dashboard: NavigatorScreenParams<DashboardStackParamList>;
  Orders: NavigatorScreenParams<OrdersStackParamList>;
  Kitchen: NavigatorScreenParams<KitchenStackParamList>;
  Settings: undefined;
};

export type DashboardStackParamList = {
...
